  - --debug option can be specified multiple times, for additional verbosity
  - --no-inventory, --no-ocsdeploy, --no-snmpquery, --no-netdiscovery options
    have been deprecated in favor of a generic --no-task option
  - --no-software, --no-printer options have been deprecated in favor of a
    generic --no-category option, and 'environment' value support has been added
* fusioninventory-agent-config executable has been dropped, in favor of better
  documentation
* documentation has been reviewed for consistency in various places where it
  appears (--help output, man page, configuration file)
* XML::TreePP perl module is now used instead of XML::Simple, reducing native
  perl modules dependencies
* OcsDeploy task is now deprecated. Please continue to use the 2.1.x agent is
  you need it.

Minor changes:
* Add the HARDWARE/CHASSIS_TYPE information
* local inventory file name now has .xml extension (#211)
* Linux: report all IP addresses used by each interfaces (#854)
* HPUX: don't report unoccupied memory slots
* AIX: add LVM support

2.1.14  Wed, 22 Feb 2012 14:56:51 -0000

LINUX
 ✔ Detected OS is &quot;RedHat&quot; for CentOS servers if lsb_release not available
       commit:d3a252
     http://forge.fusioninventory.org/issues/1193
   thanks: Jonathan Clarke

MACOSX
 ✔ no-software option doesn't work as advertised
       commit:18dfaf
     http://forge.fusioninventory.org/issues/1476
   thanks: Ronan Mejecaze
 ✔ syntax error in Video module
   thanks: Walid Nouh

WINDOWS
 ✔ No 2007 Microsoft Office system into XML
       commit:39f3c7
     http://forge.fusioninventory.org/issues/1065
   thanks: Walid Nouh, Xavier Caillaud, jerome slayer
 ✔ On Windows Vista Office 2007 is not correctly gathered
       commit:39f3c7
     http://forge.fusioninventory.org/issues/1425
   thanks: Walid Nouh, Xavier Caillaud
 ✔ VM System incorrect
       commit:259996
     http://forge.fusioninventory.org/issues/1436
   thanks: Mario Gzuk