@@ -45,6 +45,9 @@ Major changes:
     have been deprecated in favor of a generic --no-task option
   - --no-software, --no-printer options have been deprecated in favor of a
     generic --no-category option, and 'environment' value support has been added
+* new --config option allows to select configuration backend, allowing to use
+  file configuration if needed under windows, or to ignore any external
+  configuration
 * fusioninventory-agent-config executable has been dropped, in favor of better
   documentation
 * documentation has been reviewed for consistency in various places where it
